[package]
name = "sha256-bench-rust"
description = "Benchmark for SHA256 calculation"
version = "0.1.0"
authors = ["Evgeny Beskonchin <evgeny@beskonchin.info>"]
edition = "2018"

[dependencies]
rand = "0.9.1"
sha2 = "0.10.9"
rayon = "1.10.0"

[profile.release]
lto = "thin"
debug = "none"